# Serenify

./: AddTask.qml  CMakeLists.txt  Main.qml  PlusButton.qml  Task.h  Task.qml  TaskCreator.qml  TaskManager.cpp  TaskManager.h  TimeDateSelector.qml  TrashButton.qml  main.cpp  resources.qrc
sqlite/: sqlite3.exp  sqlite3.lib
